--- a/src/assets/css/button.scss
+++ b/src/assets/css/button.scss
@@ -1,15 +1,17 @@
 .btn {
-  padding: 10px 25px;
-  border-radius: 10px;
+  padding: 5px 35px;
+  border-radius: 5px;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, .4);
 
   transition: .5s;
 
   text-transform: uppercase;
+
+  font-style: italic;
 }
 
 .btn:hover {
-  filter: brightness(140%);
+  filter: brightness(90%);
 }
 
 .btn:focus {
